thinh_commit: done crawling with API, RSS

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "puppeteer": "^23.5.1",
     "run": "^1.5.0",
     "sequelize": "^6.37.3",
-    "watch": "^0.13.0"
+    "watch": "^0.13.0",
+    "xml2js": "^0.6.2"
   }
 }
